# durable-code-test

./: .actrc  .design-lint.yml  .env.example  .file-placement-rules.json  .gitignore  .htmlhintrc  .pre-commit-config.yaml  CLAUDE.md  Makefile  Makefile.design  Makefile.gh  Makefile.lint  Makefile.test  README.md  REVIEW_PROMPT.md  check-page.py  debug_ignore.py  debug_ignore2.py  debug_orchestrator.py  debug_rule.py  docker-compose.dev.yml  docker-compose.yml  fix-font-sizes.sh  package-lock.json  package.json  test-page.js  test-rendered-content.js  test_isp_example.py  test_ocp_violation.py
.ai/: index.json  index.yaml  index_expanded.md  layout.json  layout.yaml
.ai/docs/: CSS_LAYOUT_STABILITY.md  DOCKER_EXECUTION_STANDARDS.md  ERROR_HANDLING_STANDARDS.md  INFRASTRUCTURE_FOR_AI.md  PERFORMANCE_OPTIMIZATION_STANDARDS.md  REPOSITORY_FOR_AI.md  STANDARDS.md  STYLING_SYSTEM_GUIDE.md
.ai/features/: claude-integration.md  design-linters.md  development-tooling.md  error-boundaries.md  testing-framework.md  web-application.md
.ai/howto/: add-api-endpoint.md  complete-debugging-guide.md  create-custom-linter.md  debug-issues.md  debug-with-tests-and-logging.md  deploy-application.md  develop-multiple-branches.md  github-merge-workflow.md  implement-backend-error-handling.md  implement-error-boundaries.md  implement-websocket-react.md  run-linting.md  run-tests.md  setup-development.md  test-page-content.md
.ai/templates/: backend-exception-hierarchy.py.template  backend-retry-logic.py.template  circular-buffer.ts.template  fastapi-endpoint.py.template  linting-rule.py.template  performance-monitor.ts.template  react-component.tsx.template  react-error-boundary.tsx.template  react-feature-hook.ts.template  react-feature-types.ts.template  react-feature.tsx.template  react-performance-hook.ts.template  react-websocket-hook.ts.template  react-websocket-service.ts.template  react-websocket-singleton.ts.template  test-suite.py.template  web-tab.tsx.template  websocket-endpoint.py.template  workflow.html.template
.claude/: hooks.json  new-code.md
.claude/commands/: ask.md  done.md  fix.md  new-code.md  solid.md
.github/scripts/: check_isp_violations.py  check_ocp_violations.py  requirements.txt
.github/workflows/: README.md  backend-tests.yml  breadcrumb-check.yml  design-check.yml  frontend-tests.yml  isp-check.yml  lint.yml  ocp-check.yml  playwright-tests.yml  print-statement-check.yml  test.yml
.tmp_frontend_upgrade/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.tmp_make_robust/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
docs/: BRANCH_PROTECTION.md  CSS_LAYOUT_STABILITY.md  DESIGN_PRINCIPLES_LINTING.md  FILE_HEADER_STANDARDS.md  STANDARDS.md
durable-code-app/backend/: .dockerignore  .flake8  Dockerfile  Dockerfile.dev  coverage.xml  pyproject.toml  test_oscilloscope.py
durable-code-app/backend/app/: main.py  oscilloscope.py  security.py
durable-code-app/backend/app/core/: __init__.py  circuit_breaker.py  exceptions.py  retry.py
durable-code-app/backend/test/unit_test/tools/: test_magic_number_detector.py  test_srp_analyzer.py
durable-code-app/frontend/: .dockerignore  .eslintrc.json  .prettierrc  Dockerfile  Dockerfile.dev  eslint.config.js  nginx.conf  package-lock.json  package.json  set-standards.html  stylelint.config.js  test-page.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
durable-code-app/frontend/public/: breadcrumb-navigation.js  ci-cd-pipeline.html  custom-linters.html  linter-violations-case-study.html  ocp-case-study.html  set-standards.html
durable-code-app/frontend/public/diagrams/: ai-review-sequence.html  durable-code-flow.html  implementation-plan.html
durable-code-app/frontend/public/planning/: feature-index.html  metadata.html  progress.html  rollout-plan.html  technical-spec.html  testing-plan.html
durable-code-app/frontend/scripts/: check-page-content.js  simple-check.js
durable-code-app/frontend/src/: App.css  App.test.tsx  App.tsx  global.d.ts  index.css  main.tsx  qa-maintenance.css  test-setup.ts  vite-env.d.ts
durable-code-app/frontend/src/app/: AppProviders.tsx
durable-code-app/frontend/src/components/: ParticleBackground.tsx
durable-code-app/frontend/src/config/: tabs.config.ts
durable-code-app/frontend/src/pages/: CustomLinters.css  CustomLinters.tsx  Standards.css  Standards.tsx
durable-code-app/frontend/src/store/: index.ts  (+3 more)
planning/: deployment-flow.html
planning/deployment/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md  deployment-flow.html
planning/make_robust/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
scripts/: check-page-content.js  check-page.py  ci-cd-parity-check.sh  get-branch-ports.sh  gh-pr-check.sh  gh-watch-checks.sh  lint-and-request-fix.sh  lint-watch-dashboard.sh  simple-check.js  test-rendered-content.js
test/: test_oscilloscope.py
test/integration_test/: Dockerfile.playwright  requirements.txt  run_tests_docker.sh  test_api_integration.py  test_oscilloscope_playwright.py  test_oscilloscope_playwright.py.backup
test/unit_test/app/: __init__.py  test_main.py  test_oscilloscope.py
test/unit_test/backend/: test_error_handling.py  test_security.py
test/unit_test/tools/: __init__.py  test_magic_number_detector.py  test_nesting_depth_linter.py  test_print_statement_linter.py  test_srp_analyzer.py
tools/: .flake8  README.md  __init__.py  security_linter.py  simple_print_check.py
tools/design-linters/: __init__.py  breadcrumb_linter.py  file_placement_linter.py  header_linter.py  magic_number_detector.py  print_statement_linter.py  srp_analyzer.py
tools/design_linters/: __init__.py  __main__.py  breadcrumb_linter.py  cli.py  constants.py  file_placement_linter.py  header_linter.py  magic_number_detector.py  nesting_depth_linter.py  print_statement_linter.py  srp_analyzer.py
tools/design_linters/examples/: framework_demo.py
tools/design_linters/framework/: __init__.py  analyzer.py  ignore_utils.py  interfaces.py  reporters.py  rule_registry.py
tools/design_linters/utils/: __init__.py  context_helpers.py  severity_helpers.py
(+193 files in other folders)
