[tool.poetry]
name = "durable-code-backend"
version = "0.1.0"
description = "Backend API for Durable Code Test"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
ruff = "^0.13.0"
mypy = "^1.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"